--- a/aboutus.html
+++ b/aboutus.html
@@ -74,7 +74,13 @@
                     <div class="row justify-content-center">
                         <div class="col-11 col-lg-8 blurb mb-5 mb-md-0">
                             <h2>Staff 2</h2>
-                            <p class="lead">Bio For Staff Member Goes Here</p>
+                            <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum itaque aliquam incidunt deleniti, cupiditate esse unde,
+                            nihil ex ad accusamus asperiores? Aperiam corporis, quod nesciunt repellendus autem quae doloremque quis consequatur
+                            praesentium odio repudiandae laudantium quia id. Vitae consectetur mollitia molestias voluptatibus! Exercitationem
+                            similique numquam nulla deserunt mollitia molestiae est! Ea est ipsam provident itaque architecto molestias laudantium
+                            nesciunt omnis, perferendis culpa nihil at unde optio, odit assumenda, nemo vel aperiam deleniti saepe ducimus alias quo
+                            accusamus. Qui laborum, natus aliquam eaque fugit recusandae autem quis at esse sint doloribus atque magnam nesciunt
+                            explicabo harum maxime in facere tempora consectetur.</p>
                         </div>
                     </div>
                 </div>
@@ -90,7 +96,13 @@
                     <div class="row justify-content-center">
                         <div class="col-11 col-lg-8 blurb mb-5 mb-md-0">
                             <h2>Staff 3</h2>
-                            <p class="lead">Bio For Staff Member Goes Here</p>
+                            <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum itaque aliquam incidunt deleniti, cupiditate esse unde,
+                            nihil ex ad accusamus asperiores? Aperiam corporis, quod nesciunt repellendus autem quae doloremque quis consequatur
+                            praesentium odio repudiandae laudantium quia id. Vitae consectetur mollitia molestias voluptatibus! Exercitationem
+                            similique numquam nulla deserunt mollitia molestiae est! Ea est ipsam provident itaque architecto molestias laudantium
+                            nesciunt omnis, perferendis culpa nihil at unde optio, odit assumenda, nemo vel aperiam deleniti saepe ducimus alias quo
+                            accusamus. Qui laborum, natus aliquam eaque fugit recusandae autem quis at esse sint doloribus atque magnam nesciunt
+                            explicabo harum maxime in facere tempora consectetur.</p>
                         </div>
                     </div>
                 </div>
@@ -100,7 +112,13 @@
                     <div class="row justify-content-center">
                         <div class="col-11 col-lg-8 blurb mb-5 mb-md-0">
                             <h2>Staff 4</h2>
-                            <p class="lead">Bio For Staff Member Goes Here</p>
+                            <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum itaque aliquam incidunt deleniti, cupiditate esse unde,
+                            nihil ex ad accusamus asperiores? Aperiam corporis, quod nesciunt repellendus autem quae doloremque quis consequatur
+                            praesentium odio repudiandae laudantium quia id. Vitae consectetur mollitia molestias voluptatibus! Exercitationem
+                            similique numquam nulla deserunt mollitia molestiae est! Ea est ipsam provident itaque architecto molestias laudantium
+                            nesciunt omnis, perferendis culpa nihil at unde optio, odit assumenda, nemo vel aperiam deleniti saepe ducimus alias quo
+                            accusamus. Qui laborum, natus aliquam eaque fugit recusandae autem quis at esse sint doloribus atque magnam nesciunt
+                            explicabo harum maxime in facere tempora consectetur.</p>
                         </div>
                     </div>
                 </div>
@@ -116,7 +134,13 @@
                     <div class="row justify-content-center">
                         <div class="col-11 col-lg-8 blurb mb-5 mb-md-0">
                             <h2>Staff 5</h2>
-                            <p class="lead">Bio For Staff Member Goes Here</p>
+                            <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum itaque aliquam incidunt deleniti, cupiditate esse unde,
+                            nihil ex ad accusamus asperiores? Aperiam corporis, quod nesciunt repellendus autem quae doloremque quis consequatur
+                            praesentium odio repudiandae laudantium quia id. Vitae consectetur mollitia molestias voluptatibus! Exercitationem
+                            similique numquam nulla deserunt mollitia molestiae est! Ea est ipsam provident itaque architecto molestias laudantium
+                            nesciunt omnis, perferendis culpa nihil at unde optio, odit assumenda, nemo vel aperiam deleniti saepe ducimus alias quo
+                            accusamus. Qui laborum, natus aliquam eaque fugit recusandae autem quis at esse sint doloribus atque magnam nesciunt
+                            explicabo harum maxime in facere tempora consectetur.</p>
                         </div>
                     </div>
                 </div>
@@ -126,7 +150,13 @@
                     <div class="row justify-content-center">
                         <div class="col-11 col-lg-8 blurb mb-5 mb-md-0">
                             <h2>Staff 6</h2>
-                            <p class="lead">Bio For Staff Member Goes Here</p>
+                            <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum itaque aliquam incidunt deleniti, cupiditate esse unde,
+                            nihil ex ad accusamus asperiores? Aperiam corporis, quod nesciunt repellendus autem quae doloremque quis consequatur
+                            praesentium odio repudiandae laudantium quia id. Vitae consectetur mollitia molestias voluptatibus! Exercitationem
+                            similique numquam nulla deserunt mollitia molestiae est! Ea est ipsam provident itaque architecto molestias laudantium
+                            nesciunt omnis, perferendis culpa nihil at unde optio, odit assumenda, nemo vel aperiam deleniti saepe ducimus alias quo
+                            accusamus. Qui laborum, natus aliquam eaque fugit recusandae autem quis at esse sint doloribus atque magnam nesciunt
+                            explicabo harum maxime in facere tempora consectetur.</p>
                         </div>
                     </div>
                 </div>
