--- a/faq.html
+++ b/faq.html
@@ -272,7 +272,7 @@
                 <a href="http://www.youtube.com" class="fab fa-youtube"></a>
             </li>
             <li class="nav-item">
-                <a href="http://wwww.instagram.com" class="fab fa-instagram"></a>
+                <a href="http://www.instagram.com" class="fab fa-instagram"></a>
             </li>
             <li class="nav-item">
                 <a href="http://www.twitter.com" class="fab fa-twitter"></a>
