Updates to AboutUs

--- a/aboutus.html
+++ b/aboutus.html
@@ -56,7 +56,7 @@
         <!-- Staff -->
 
         <section class="container-fluid px-0 content">
-            <div class="row align-items-center">
+            <div class="row align-items-center content">
                 <div class="col-md-6">
                     <img id="BioImg" src="assets/images/biopic.jpg" alt="" class="img-fluid img-thumbnail">
                 </div>
@@ -84,7 +84,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 d-flex justify-content-end order-1 order-md-2">
+                <div class="col-md-6 order-1 order-md-2">
                     <img id="BioImg" src="assets/images/biopic.jpg" alt="" class="img-fluid img-thumbnail">
                 </div>
             </div>
