Fixing images on "AboutUs"

--- a/aboutus.html
+++ b/aboutus.html
@@ -70,19 +70,6 @@
                 </div>
             </div>
             <div class="row align-items-center content">
-                <div class="col-md-6">
-                    <img id="BioImg" src="assets/images/biopic.jpg" alt="" class="img-fluid img-thumbnail">
-                </div>
-                <div class="col-md-6 text-center">
-                    <div class="row justify-content-center">
-                        <div class="col-11 col-sm-12 mb-2 mb-md-0">
-                            <h2>Justin Richards</h2>
-                            <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum itaque aliquam incidunt deleniti, cupiditate esse unde, nihil ex ad accusamus asperiores? Aperiam corporis, quod nesciunt repellendus autem quae doloremque quis consequatur praesentium odio repudiandae laudantium quia id. Vitae consectetur mollitia molestias voluptatibus! Exercitationem similique numquam nulla deserunt mollitia molestiae est! Ea est ipsam provident itaque architecto molestias laudantium nesciunt omnis, perferendis culpa nihil at unde optio, odit assumenda, nemo vel aperiam deleniti saepe ducimus alias quo accusamus. Qui laborum, natus aliquam eaque fugit recusandae autem quis at esse sint doloribus atque magnam nesciunt explicabo harum maxime in facere tempora consectetur.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row align-items-center content">
                 <div class="col-md-6 text-center order-2 order-md-1">
                     <div class="row justify-content-center">
                         <div class="col-11 col-sm-12 mb-2 mb-md-0">
@@ -125,17 +112,23 @@
                     <div class="row justify-content-center">
                         <div class="col-11 col-sm-12 mb-2 mb-md-0">
                             <h2>Staff 4</h2>
-                            <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum itaque aliquam incidunt deleniti, cupiditate esse unde,
-                            nihil ex ad accusamus asperiores? Aperiam corporis, quod nesciunt repellendus autem quae doloremque quis consequatur
-                            praesentium odio repudiandae laudantium quia id. Vitae consectetur mollitia molestias voluptatibus! Exercitationem
-                            similique numquam nulla deserunt mollitia molestiae est! Ea est ipsam provident itaque architecto molestias laudantium
-                            nesciunt omnis, perferendis culpa nihil at unde optio, odit assumenda, nemo vel aperiam deleniti saepe ducimus alias quo
-                            accusamus. Qui laborum, natus aliquam eaque fugit recusandae autem quis at esse sint doloribus atque magnam nesciunt
-                            explicabo harum maxime in facere tempora consectetur.</p>
+                            <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum itaque aliquam incidunt
+                                deleniti, cupiditate esse unde,
+                                nihil ex ad accusamus asperiores? Aperiam corporis, quod nesciunt repellendus autem quae doloremque
+                                quis consequatur
+                                praesentium odio repudiandae laudantium quia id. Vitae consectetur mollitia molestias voluptatibus!
+                                Exercitationem
+                                similique numquam nulla deserunt mollitia molestiae est! Ea est ipsam provident itaque architecto
+                                molestias laudantium
+                                nesciunt omnis, perferendis culpa nihil at unde optio, odit assumenda, nemo vel aperiam deleniti
+                                saepe ducimus alias quo
+                                accusamus. Qui laborum, natus aliquam eaque fugit recusandae autem quis at esse sint doloribus atque
+                                magnam nesciunt
+                                explicabo harum maxime in facere tempora consectetur.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 d-flex justify-content-end order-1 order-md-2">
+                <div class="col-md-6 order-1 order-md-2">
                     <img id="BioImg" src="assets/images/biopic.jpg" alt="" class="img-fluid img-thumbnail">
                 </div>
             </div>
@@ -163,17 +156,23 @@
                     <div class="row justify-content-center">
                         <div class="col-11 col-sm-12 mb-2 mb-md-0">
                             <h2>Staff 6</h2>
-                            <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum itaque aliquam incidunt deleniti, cupiditate esse unde,
-                            nihil ex ad accusamus asperiores? Aperiam corporis, quod nesciunt repellendus autem quae doloremque quis consequatur
-                            praesentium odio repudiandae laudantium quia id. Vitae consectetur mollitia molestias voluptatibus! Exercitationem
-                            similique numquam nulla deserunt mollitia molestiae est! Ea est ipsam provident itaque architecto molestias laudantium
-                            nesciunt omnis, perferendis culpa nihil at unde optio, odit assumenda, nemo vel aperiam deleniti saepe ducimus alias quo
-                            accusamus. Qui laborum, natus aliquam eaque fugit recusandae autem quis at esse sint doloribus atque magnam nesciunt
-                            explicabo harum maxime in facere tempora consectetur.</p>
+                            <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum itaque aliquam incidunt
+                                deleniti, cupiditate esse unde,
+                                nihil ex ad accusamus asperiores? Aperiam corporis, quod nesciunt repellendus autem quae doloremque
+                                quis consequatur
+                                praesentium odio repudiandae laudantium quia id. Vitae consectetur mollitia molestias voluptatibus!
+                                Exercitationem
+                                similique numquam nulla deserunt mollitia molestiae est! Ea est ipsam provident itaque architecto
+                                molestias laudantium
+                                nesciunt omnis, perferendis culpa nihil at unde optio, odit assumenda, nemo vel aperiam deleniti
+                                saepe ducimus alias quo
+                                accusamus. Qui laborum, natus aliquam eaque fugit recusandae autem quis at esse sint doloribus atque
+                                magnam nesciunt
+                                explicabo harum maxime in facere tempora consectetur.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 d-flex justify-content-end order-1 order-md-2">
+                <div class="col-md-6 order-1 order-md-2">
                     <img id="BioImg" src="assets/images/biopic.jpg" alt="" class="img-fluid img-thumbnail">
                 </div>
             </div>
