--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         
             <hr class="featurette-divider">
 
-    <div class="container">
+    <div class="container p-0">
         <div class="row featurette justify-content-between">
             <div id="events" class="col-md-5">
                 <h2 class="featurette-heading">Upcoming Events <br><span class="text-muted">Don't miss it!</span></h2>
